log
vi., 18 de abr. de 2025 15:06:55: 
 hashmap.c | 61 +++++++++++++++++++++++++++++++++++++++----------------------
 1 file changed, 39 insertions(+), 22 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:50:9: error: unused variable 'ogPos' [-Werror=unused-variable]
     int ogPos = pos;
         ^~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
vi., 18 de abr. de 2025 15:07:25: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
aa32002
vi., 18 de abr. de 2025 15:11:14: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:71:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:67:10: note: declared here
 HashMap *createMap(long capacity)
          ^~~~~~~~~
hashmap.c:76:9: error: 'return' with no value, in function returning non-void [-Werror]
         return;
         ^~~~~~
hashmap.c:67:10: note: declared here
 HashMap *createMap(long capacity)
          ^~~~~~~~~
cc1.exe: all warnings being treated as errors
50cca53
